[GIP-798] minor refactoring